--- a/backend/.env
+++ b/backend/.env
@@ -4,3 +4,6 @@ MONGO_URL = "mongodb+srv://deepakmehra7830:SM2VHRAEeBrLssX2@cluster0.quoo6.mongo
 CLOUD_NAME = dyi6ccrys
 CLOUD_API_KEY = 878773631637959
 CLOUD_SECRET_KEY = OYLV99MNUQcm9TjFBvhvEgYMpFM
+
+
+JWT_SECRET_KEY = azchjqazuUo9e6TLptteT7kY26nEQmWWnHJ/iRuWzek=
